@@ -16,6 +16,7 @@ Release 0.3.0 - Unreleased
    HBASE-801  When a table haven't disable, shell could response in a "user
               friendly" way.
    HBASE-816  TableMap should survive USE (Andrew Purtell via Stack)
+   HBASE-812  Compaction needs little better skip algo (Daniel Leffel via Stack)
 
   NEW FEATURES
   OPTIMIZATIONS
